--- a/_config.yml
+++ b/_config.yml
@@ -16,16 +16,15 @@ url                      : https://kqhan.github.io # the base hostname & protoco
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
-education:
+sidebar:
+  education:
     - degree: "Ph.D. in Computer Science"
       school: "XYZ University"
       date: "2016 - 2020"
     - degree: "M.Sc. in Data Science"
       school: "ABC University"
       date: "2014 - 2016"
-    - degree: "B.Sc. in Software Engineering"
-      school: "123 College"
-      date: "2010 - 2014"
+
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
